tests/snapshots/test_runner__tests__compiler__typecheck__effect_operation_argument_type_mismatch_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
effect throw : <A> String -> A

entry
  123 throw

// Note:
// throw has the type : <A> String -> A effect throw
// the body of throw will be injected with a perform effect node

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/effect_operation_argument_type_mismatch_1.kk:4:3
  │
4 │   123 throw
  │   ^^^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - String      | + Integer   |
    +---------------+-------------+
